syntax = "proto3";
package pb;
option go_package = ".;pb";
import "google/protobuf/any.proto";

message RpcHeader{
	enum RoomErrEnum {
		OK            =0;
		ReqParamError =1;
	}
	RoomErrEnum  ret   = 1;
	string       errmsg= 2;
}

message RpcCreateDSReq{
	string    realmCfgID = 1;  //
}
message RpcCreateDSResp{
	RpcHeader header     = 1;
	string    dsID       = 2;
	string    realmCfgID = 3;  //
}

message RpcRemoveDSReq{
	string   dsID    = 1;
}
message RpcRemoveDSResp{
	RpcHeader header   =1;
}

// game dsc
service RpcGameDsc {
  rpc CreateDS (RpcCreateDSReq) returns (RpcCreateDSResp) {}
  rpc RemoveDS (RpcRemoveDSReq) returns (RpcRemoveDSResp) {}
}


message StreamClientEvent{
   google.protobuf.Any CEvent = 1;
}

message StreamServerEvent {
   google.protobuf.Any SEvent = 1;
}
message StreamCreateDS{
	string   dsID       = 1;
	string   realmCfgID = 3;  //
}
message StreamCreateDSResult{
	string   dsID         = 1;
	string   realmCfgID   = 2;  //
	string   dsAddr       = 3;
}
message StreamRemoveDS{
	string   dsID   = 1;
}
message StreamRemoveDSResult{
	string   dsID    = 1;
}

service StreamDscDSA {
  rpc StreamService(stream StreamClientEvent)returns(stream StreamServerEvent){}
}